[package]
name = "plonky2-dynamic-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = {path="./plonky2/plonky2"}
anyhow = "1.0"
hashbrown = { version = "0.12.3", default-features = false, features = ["ahash", "serde"] }
